--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Backrooms</title>
   </head>
   <body>
+    <script type="module" src="/src/main.jsx"></script>
     <div id="root"></div>
   </body>
 </html>
